pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -1371,6 +1371,74 @@
                 <div class="col-sm-12 mt-5 col-md-6">
                     <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/amHodgson-Homepage.png" itemprop="contentUrl" data-size="574x1135">
+                                <img src="images-new/amhodgson-main-wp.png" itemprop="thumbnail" alt="amhodgson.com" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom responsive Bootstrap 4 Wordpress template/theme</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/custom-Book-AMHodgson.png" itemprop="contentUrl" data-size="747x635">
+                                <img src="images-new/custom-Book-AMHodgson.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Book page utilizing CSS3/HTML5/Bootstrap 4/Wordpress templating based on client's vision.</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/article-show-page-AMHodgson-WP.png" itemprop="contentUrl" data-size="757x2132">
+                                <img src="images-new/article-show-page-AMHodgson-WP.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Article show page utilizing CSS3/HTML5/Bootstrap 4/Wordpress templating based on client's vision.  Also revamped YouTube embed to be more mobile friendly/responsive.</figcaption>
+                        </figure>
+
+
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/AMHodgson-Author.png" itemprop="contentUrl" data-size="747x536">
+                                <img src="images-new/AMHodgson-Author.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Author Bio page utilizing CSS3/HTML5/Bootstrap 4/Wordpress templating, again based on the client's vision.</figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/amHodgson-Blog.png" itemprop="contentUrl" data-size="757x1808">
+                                <img src="images-new/amHodgson-Blog.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Wordpress Blog page utilizing CSS3/HTML5/Bootstrap 4/Wordpress templating incorporating elements from client's vision.</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/AMHodgson-Calendar-Plugin-CustomizedLook.png" itemprop="contentUrl" data-size="747x855">
+                                <img src="images-new/AMHodgson-Calendar-Plugin-CustomizedLook.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Customized theme for Wordpress Calendar plugin (The Events Calendar - - https://wordpress.org/plugins/the-events-calendar) utilizing CSS3/HTML5/Bootstrap 4/Wordpress templating, and maintaining my incorporation of elements from the client's vision.</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/AMHodgson-Contact.png" itemprop="contentUrl" data-size="757x1019">
+                                <img src="images-new/AMHodgson-Contact.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Customized contact page utilizing CSS3/HTML5/Bootstrap 4/Wordpress templating, and maintaining the incorporation of stylistic elements from the client's vision.</figcaption>
+                        </figure>
+
+
+                    </div>
+                    <h6 class="trebuchet">Custom Wordpress Theme<br/><a href="http://www.amhodgson.com" target="_blank" class="port-links">AMHodgson.com</a> (Coming Summer 2019)</h6>
+                    <a href="#demo16" class="btn btn-dark" data-toggle="collapse">More Info</a>
+                    <div id="demo16" class="collapse calibri">
+                        <br/>
+                        <p>I created this responsive custom Bootstrap 4 Wordpress template/theme for author AM Hodgson.  As of Spring 2019 this site is not launched and still in development, but if you wish to see the live version of this website please visit:  <a href="https://wp.amhodgson.com/" target="_blank">https://wp.amhodgson.com</a></p>
+                    </div>
+
+                </div>
+
+
+
+                <div class="col-sm-12 mt-5 col-md-6">
+                    <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                             <a href="images-new/amhodgson-section-main.png" itemprop="contentUrl" data-size="1048x1333">
                                 <img src="images-new/amhodgson-main.png" itemprop="thumbnail" alt="amhodgson.com" />
                             </a>
@@ -1392,12 +1460,12 @@
                         </figure>
 
                     </div>
-                    <h6 class="trebuchet">Custom Tumblr Theme<br/><a href="http://www.amhodgson.com" target="_blank" class="port-links">AMHodgson.com</a></h6>
+                    <h6 class="trebuchet">Custom Tumblr Theme<br/><a href="http://www.amhodgson.com" target="_blank" class="port-links">AMHodgson.com</a> (Summer 2014-Summer 2019)</h6>
                     <a href="#demo8" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo8" class="collapse calibri">
                         <br/>
 
-                        <p>I created this responsive custom Tumblr theme with my sister for her writing career.  Before taking on this project I did not know much about Tumblr, so I was required to learn how to create a custom theme and found that it is a similar process to creating Wordpress themes.  For this project I also created a custom contact form page utilizing PHP.  I would not say that I am proficient at creating Tumblr themes but I am confident I could get better at it, and it would also not be difficult for me to learn similar templating.  If you wish to see the live version of this website please visit:  <a href="http://amhodgson.com/" target="_blank">http://www.amhodgson.com</a></p>
+                        <p>I created this responsive custom Tumblr theme for author AM Hodgson.  Before taking on this project I did not know much about Tumblr, so I was required to learn how to create a custom theme and found that it is a similar process to creating Wordpress themes.  For this project I also created a custom contact form page utilizing PHP.  I would not say that I am proficient at creating Tumblr themes but I am confident I could get better at it, and it would also not be difficult for me to learn similar templating.  If you wish to see the live version of this website please visit:  <a href="http://amhodgson.com/" target="_blank">http://www.amhodgson.com</a></p>
 
 
                     </div>
