pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
 
 
                     </div>
-                    <h6 class="trebuchet">Custom Wordpress Theme<br/><a href="http://www.amhodgson.com" target="_blank" class="port-links">AMHodgson.com</a> (Coming Summer 2019)</h6>
+                    <h6 class="trebuchet">Custom Wordpress Theme<br/><a href="https://wp.amhodgson.com" target="_blank" class="port-links">AMHodgson.com</a> (Coming Summer 2019)</h6>
                     <a href="#demo16" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo16" class="collapse calibri">
                         <br/>
