pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <br/>
 
             <div class="container">
-                <h1 id="resume_header" class="trebuchet lg-headers text-center"><i class="fas fa-file-alt"></i> Resume <a class="btn btn-sm btn-dark" href="CSnyder-Resume-March-30th-2019.pdf"><i class="fas fa-download"></i> PDF</a></h1>
+                <h1 id="resume_header" class="trebuchet lg-headers text-center"><i class="fas fa-file-alt"></i> Resume <a class="btn btn-sm btn-dark" href="Chris_Snyder_Resume.pdf"><i class="fas fa-download"></i> PDF</a></h1>
 
             <div class="row">
 
