pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -610,6 +610,11 @@
                     </tr>
 
                     <tr class="d-flex">
+                        <td class="col-6">Vue.js</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
                         <td class="col-6">Wordpress</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
                     </tr>
